src/test/ui/mismatched_types/unboxed-closures-vtable-mismatch.stderr
error[E0631]: type mismatch in closure arguments
  --> $DIR/unboxed-closures-vtable-mismatch.rs:15:13
   |
LL |     let f = to_fn_mut(|x: usize, y: isize| -> isize { (x as isize) + y });
   |                       ----------------------------- found signature of `fn(usize, isize) -> _`
LL |
LL |     let z = call_it(3, f);
   |             ^^^^^^^ expected signature of `fn(isize, isize) -> _`
   |
note: required by `call_it`
  --> $DIR/unboxed-closures-vtable-mismatch.rs:7:1
   |
LL | fn call_it<F:FnMut(isize,isize)->isize>(y: isize, mut f: F) -> isize {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

